--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -5,14 +5,14 @@ block content
       h1.is-1.title Accordion
       .js-accordion
         .js-accordion-child.panel(data-target = "first")
-          .accorion-title.panel-heading First title
+          .js-accorion-title.panel-heading First title
           .js-accordion-body.panel-block
             p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam quas commodi soluta corrupti perferendis dicta dolore quasi autem nobis, minima odio inventore aliquid, animi illo magni obcaecati reprehenderit est. Quo?
         .js-accordion-child.panel(data-target = "seconde")
-          .accorion-title.panel-heading seconde title
+          .js-accorion-title.panel-heading seconde title
           .js-accordion-body.panel-block
             p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam quas commodi soluta corrupti perferendis dicta dolore quasi autem nobis, minima odio inventore aliquid, animi illo magni obcaecati reprehenderit est. Quo?
         .js-accordion-child.panel(data-target = "third")
-          .accorion-title.panel-heading third title
+          .js-accorion-title.panel-heading third title
           .js-accordion-body.panel-block
             p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam quas commodi soluta corrupti perferendis dicta dolore quasi autem nobis, minima odio inventore aliquid, animi illo magni obcaecati reprehenderit est. Quo?
