--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -5,6 +5,12 @@
   .panel-heading
     border-radius: 0
     cursor: pointer
+    position: relative
+    .js-icon
+      position: absolute
+      right: 20px
+      top: 50%
+      transform: translateY(-50%)
     &:hover
       color: hsl(217, 71%, 53%)
       border-color: hsl(217, 71%, 53%)
@@ -12,6 +18,7 @@
     .panel-heading
       color: hsl(217, 71%, 53%)
       border-color: hsl(217, 71%, 53%)
+
 
   .js-accordion-body
     display: none
