--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -5,14 +5,23 @@ block content
       h1.is-1.title Accordion
       .js-accordion
         .js-accordion-child.panel(data-target = "first")
-          .js-accorion-title.panel-heading First title
+          .js-accorion-title.panel-heading
+            span First title
+            span.js-icon
+              i.material-icons add_box
           .js-accordion-body.panel-block
             p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam quas commodi soluta corrupti perferendis dicta dolore quasi autem nobis, minima odio inventore aliquid, animi illo magni obcaecati reprehenderit est. Quo?
         .js-accordion-child.panel(data-target = "seconde")
-          .js-accorion-title.panel-heading seconde title
+          .js-accorion-title.panel-heading
+            span seconde title
+            span.js-icon
+              i.material-icons add_box
           .js-accordion-body.panel-block
             p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam quas commodi soluta corrupti perferendis dicta dolore quasi autem nobis, minima odio inventore aliquid, animi illo magni obcaecati reprehenderit est. Quo?
         .js-accordion-child.panel(data-target = "third")
-          .js-accorion-title.panel-heading third title
+          .js-accorion-title.panel-heading
+            span third title
+            span.js-icon
+              i.material-icons add_box
           .js-accordion-body.panel-block
             p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam quas commodi soluta corrupti perferendis dicta dolore quasi autem nobis, minima odio inventore aliquid, animi illo magni obcaecati reprehenderit est. Quo?
